<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_password"
            android:icon="@android:drawable/ic_secure"
            android:title="@string/navBtnPass" />
        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/ic_friend"
            android:title="@string/navBtnContact" />
        <item
            android:id="@+id/nav_question"
            android:icon="@android:drawable/ic_menu_help"
            android:title="@string/navBtnQuestion" />
        <item
            android:id="@+id/nav_location"
            android:icon="@android:drawable/ic_menu_mylocation"
            android:title="@string/titleLocal" />

        <item
            android:id="@+id/nav_instr"
            android:icon="@drawable/ic_instr"
            android:title="@string/titleInstr" />
    </group>

    <item android:title="@string/navDrawerItemCommunication">
        <menu>
            <item
                android:id="@+id/nav_advise_friend"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/navBtnAdvise" />
            <item
                android:id="@+id/nav_developers"
                android:icon="@android:drawable/ic_menu_info_details"
                android:title="@string/developers" />
        </menu>
    </item>
</menu>
