<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="7dp"
    android:layout_weight="0">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <RadioGroup
            android:id="@+id/groupRadQuestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:paddingLeft="20dp">

            <RadioButton
                android:id="@+id/radioQuestion1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/rad_palec"
                android:text="@string/question1" />

            <RadioButton
                android:id="@+id/radioQuestion2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/rad_palec"
                android:text="@string/question2" />

            <RadioButton
                android:id="@+id/radioQuestion3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/rad_palec"
                android:text="@string/question3" />

            <RadioButton
                android:id="@+id/radioQuestion4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/rad_palec"
                android:text="@string/question4" />
        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:orientation="vertical">

    <EditText
        android:id="@+id/editAnswer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:background="@drawable/edit_text"
        android:gravity="center"
        android:hint="@string/hintAnswer" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:gravity="center"
        android:paddingTop="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/buttons"
            android:text="@string/btnSave"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/buttons"
            android:text="@string/btnCancel"
            android:textColor="@color/white" />

    </LinearLayout>
</LinearLayout>