<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <ScrollView
        android:id="@+id/myview"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:text="@string/strGeneralInstr"
                android:id="@+id/textView3" />

            <Button
                android:id="@+id/btnSettingsGPS"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/buttons"
                android:text="@string/btnSettingGPS"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btnOK"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/buttons"
                android:text="@string/btnOK"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="#000000"
                android:paddingTop="15dp"
                android:textSize="13sp"
                android:text="@string/btnTextPrivacyPolicy"
                android:id="@+id/textPrivacyPolicy" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>