<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:layout_weight="1">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="text"
            android:ems="10"
            android:id="@+id/editPass"
            android:background="@drawable/edit_text"
            android:hint="@string/hintPass"
            android:gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnRandPass"
            android:id="@+id/btnRandPass"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:textColor="@color/white"
            android:background="@drawable/buttons"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnSave"
            android:id="@+id/btnSave"
            android:gravity="center"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:background="@drawable/buttons"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnCancel"
            android:id="@+id/btnCancel"
            android:gravity="center"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:background="@drawable/buttons"/>
    </LinearLayout>
</LinearLayout>